FEM-3044 fixed cta and divider overlapping on mobile

--- a/htmls/src/styles/components/_amenities-details.scss
+++ b/htmls/src/styles/components/_amenities-details.scss
@@ -145,7 +145,7 @@
                 width: 21.375rem;
                 height: 3.25rem;
                 display: flex !important;
-                margin: 0 auto;
+                margin: 0 auto 1.5rem;
             }
             .amenities-details-divider {
                 height: 0.0625rem;
